# tg-markdown-to-flex

./: .gitignore  Cargo.toml  README.md  flex-spec-copy-pasted.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/tg_markdown_to_flex/: __init__.py  _core.pyi
src/: convert.rs  flex.rs  lib.rs  parser.rs
