[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "tg-markdown-to-flex"
version = "0.3.0"
description = "Convert Telegram MarkdownV2 text to LINE Flex Messages"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Vlad Stepanov", email = "utterstep@hey.com" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/utterstep/tg-markdown-to-flex"

[tool.maturin]
features = ["python"]
module-name = "tg_markdown_to_flex._core"
python-source = "python"
